--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
 .text-16 {
   font-size: 16px;
 }
 
 .text-18 {
   font-size: 18px !important;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .min-h-190 {
